# vineslam

./: .clang-format  .gitignore  .gitlab-ci.yml  1  LICENSE  LICENSE.txt  README.md  installation.md
detector/: CMakeLists.txt  package.xml
detector/include/detector/: detector_node.hpp
detector/launch/: test.launch
detector/src/: debug.cpp  detector_node.cpp
src/agriSLAM/: CMakeLists.txt  package.xml
src/agriSLAM/agriSLAM/src/: kf.cpp  kf.hpp  landmark.hpp  localizer.cpp  localizer.hpp  mapper.cpp  mapper.hpp  params.hpp  pf.cpp  pf.hpp  pose.hpp  utils.hpp
src/agrob_map_transform/: CMakeLists.txt  package.xml
src/agrob_map_transform/include/agrob_map_transform/: agrob_gnss_transform.h
src/agrob_map_transform/launch/: PF_datum.launch  navsat_transform_agrobv16.launch
src/agrob_map_transform/launch/templates/: navsat_transform_template.launch
src/agrob_map_transform/params/: navsat_transform_template.yaml  pf_datum.yaml
src/agrob_map_transform/src/: agrob_gnss_transform.cpp  agrob_gnss_transform_node.cpp  navsat_transform.cpp
src/agrob_map_transform/srv/: GetPolars.srv  GetPose.srv
src/edgetpu_cpp/: CMakeLists.txt  package.xml
src/edgetpu_cpp/edgetpu_cpp/src/: error_reporter.cc  fake_op.cc  test_utils.cc  test_utils.h  utils.cc  utils.h  version_test.cc
src/estimator/: CMakeLists.txt  package.xml
src/estimator/include/: .landmark_processor.hpp.swp  landmark_processor.hpp  particle_filter.hpp  utils.hpp
src/estimator/src/: .landmark_processor.cpp.swp  landmark_processor.cpp  particle_filter.cpp
src/localizer/: CMakeLists.txt  package.xml
src/localizer/include/localizer/: localizer_node.hpp  particle_filter.hpp  utils.hpp
src/localizer/launch/: test.launch
src/localizer/src/: localizer_node.cpp  main.cpp  particle_filter.cpp
src/mapper/: CMakeLists.txt  package.xml
src/mapper/include/mapper/: kf.hpp  landmark_processor.hpp  main_window.hpp  mapper.hpp  mapper_node.hpp  pf.hpp  utils.hpp
src/mapper/launch/: test.launch
src/mapper/mapper/src/: kf.cpp  kf.hpp  mapper.cpp  mapper.hpp  utils.hpp
src/mapper/src/: debug.cpp  draw.cpp  kf.cpp  landmark_processor.cpp  main.cpp  main_window.cpp  mapper.cpp  mapper_node.cpp  pf.cpp
src/mapper/ui/: main_window.ui
src/mapper/utils/: qnode.cpp  qnode.hpp  utils.hpp
src/odometer/: CMakeLists.txt  package.xml
src/odometer/aux/: odometer_writetofile.cpp
src/odometer/include/: .odometer.hpp.swp  odometer.hpp
src/odometer/launch/: .test.launch.swp  test.launch
src/odometer/src/: .odometer.cpp.swp  odometer.cpp  odometer_node.cpp
test/detector/: CMakeLists.txt  package.xml
test/detector/include/detector/: detector_node.hpp
test/detector/launch/: test.launch
test/detector/src/: debug.cpp  detector_node.cpp  main.cpp
vineslam/: CMakeLists.txt  package.xml
vineslam/config/: config.rviz  setup.yaml
vineslam/include/vineslam/: params.hpp
vineslam/include/vineslam/feature/: feature.hpp  semantic.hpp  three_dimensional.hpp  (+1 more)
vineslam/src/localization/: localizer.cpp  pf.cpp
vineslam/src/map_io/: elevation_map_parser.cpp  elevation_map_writer.cpp  map_parser.cpp  map_writer.cpp  topological_map_parser.cpp
vineslam/src/mapping/: elevation_map.cpp  landmark_ekf.cpp  landmark_mapping.cpp  lidar_mapping.cpp  occupancy_map.cpp  post_processing.cpp  topological_map.cpp  visual_mapping.cpp
vineslam/src/mapxml/: map_parser.cpp  map_writer.cpp
vineslam/vineslam/src/: feature.hpp  icp.cpp  icp.hpp  kf.cpp  kf.hpp  localizer.cpp  localizer.hpp  mapper2D.cpp  mapper2D.hpp  mapper3D.cpp  mapper3D.hpp  occupancy_map.cpp  occupancy_map.hpp  params.hpp  pf.cpp  pf.hpp
vineslam_msgs/: CMakeLists.txt  package.xml
vineslam_msgs/msg/: Feature.msg  FeatureArray.msg  Report.msg  feature.msg  particle.msg  report.msg
vineslam_report/: CMakeLists.txt  package.xml
vineslam_report/include/vineslam_report/: debugger.hpp  main_window.hpp  qnode.hpp
vineslam_report/src/: debugger.cpp  main.cpp  main_window.cpp  qnode.cpp
vineslam_report/ui/: main_window.ui
vineslam_ros/: CMakeLists.txt  package.xml
vineslam_ros/config/: config.rviz  map_server_params.yaml  setup_dense_mapping_node.yaml  setup_hybrid_node.yaml  setup_localization.yaml  setup_slam.yaml  test.rviz  test_dense_mapping_node.rviz  test_hybrid_node.rviz  test_localization.rviz
vineslam_ros/config/offline/: post_processing_node.rviz  setup_dense_mapping_node.yaml  setup_post_processing_node.yaml  test_dense_mapping_node.rviz
vineslam_ros/include/: convertions.hpp  dense_mapping_node.hpp  hybrid_node.hpp  localization_node.hpp  mapping_node.hpp  params_loader.hpp  replay_node.hpp  slam_node.hpp  vineslam_ros.hpp
vineslam_ros/include/offline/: dense_mapping_node.hpp  post_processing_node.hpp
vineslam_ros/launch/: test.launch  test.rviz  test_dense_mapping_node.launch.py  test_hybrid_node.launch.py  test_localization.launch  test_localization.launch.py  test_replay_node.launch  test_slam.launch  test_slam.launch.py  test_slam_launch.py  test_with_gps.launch
vineslam_ros/launch/offline/: run_post_processing_node.launch.py
vineslam_ros/param/: config.rviz  setup.yaml  setup_replay.yaml  setup_slam.yaml
vineslam_ros/src/: dense_mapping_node.cpp  hybrid_node.cpp  localization_node.cpp  main.cpp  mapping_node.cpp  replay_node.cpp  slam_node.cpp  vineslam_ros.cpp  vineslam_ros_node.cpp  visual.cpp  visualization.cpp
vineslam_ros/src/offline/: dense_mapping_node.cpp  post_processing_node.cpp
vineslam_ros/srv/: SaveMap.srv  StopGpsHeadingEstimation.srv  change_replay_node_features.srv  change_replay_node_state.srv  debug_particle_filter.srv  start_map_registration.srv
wildSLAM/: CMakeLists.txt  package.xml
wildSLAM/config/: config.rviz  setup.yaml
wildSLAM/wildSLAM/src/: feature.hpp  icp.cpp  icp.hpp  kf.cpp  kf.hpp  landmark.hpp  localizer.cpp  localizer.hpp  mapper.cpp  mapper.hpp  mapper_2d.cpp  mapper_2d.hpp  mapper_3d.cpp  mapper_3d.hpp  occupancy_map.cpp  occupancy_map.hpp  params.hpp  pf.cpp  pf.hpp  pose.hpp
wildSLAM_msgs/: CMakeLists.txt  package.xml
wildSLAM_msgs/msg/: feature.msg  featureMap.msg
(+232 files in other folders)
