<?xml version="1.0"?>
<package format="2">
  <name>detector</name>
  <version>0.0.0</version>
  <description>The detector package</description>

  <maintainer email="andre.s.aguiar@inesctec.pt">André Aguiar</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>libqt5-dev</build_depend>
  <build_depend>edgetpu_cpp</build_depend>
  <build_depend>wildSLAM</build_depend>
  <build_depend>agrob_map_transform</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>libqt5-dev</exec_depend>
  <exec_depend>edgetpu_cpp</exec_depend>
  <exec_depend>wildSLAM</exec_depend>
  <exec_depend>agrob_map_transform</exec_depend>

</package>
