<?xml version="1.0"?>
<package format="3">
    <name>vineslam</name>
    <version>0.0.0</version>
    <description>The vineslam package</description>

    <maintainer email="andre.s.aguiar@inesctec.pt">André Aguiar</maintainer>

    <license>TODO</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>