<?xml version="1.0"?>
<package format="2">
    <name>vineslam</name>
    <version>0.0.0</version>
    <description>The vineslam package</description>

    <maintainer email="andre.s.aguiar@inesctec.pt">André Aguiar</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

</package>