<?xml version="1.0"?>
<package format="3">
    <name>vineslam_ros</name>
    <version>0.0.0</version>
    <description>The vineslam_ros package</description>

    <maintainer email="andre.s.aguiar@inesctec.pt">André Aguiar</maintainer>

    <license>TODO</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <depend>ament_index_cpp</depend>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>vision_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>pcl_conversions</depend>
    <depend>vineslam</depend>
    <depend>vineslam_msgs</depend>
    <depend>agrob_map_transform</depend>
    <depend>message_generation</depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>