<?xml version="1.0"?>
<package format="2">
  <name>vineslam_ros</name>
  <version>0.0.0</version>
  <description>The vineslam_ros package</description>

  <maintainer email="andre.s.aguiar@inesctec.pt">André Aguiar</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>vineslam</build_depend>
  <build_depend>vineslam_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>interactive_markers</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vision_geometry</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>vineslam</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>interactive_markers</exec_depend>

</package>
