<?xml version="1.0"?>
<package format="2">
  <name>wildSLAM</name>
  <version>0.0.0</version>
  <description>The wildSLAM package</description>

  <maintainer email="andre.s.aguiar@inesctec.pt">André Aguiar</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

</package>
