<package>
  <name>wildSLAM_msgs</name>
  <version>0.3.4</version>
  <description>
    This package provides messages <a href="https://gitlab.inesctec.pt/agrob/agrobvslam">wildSLAM library</a>. 
  </description>

  <author email="andre.s.aguiar@inesctec.pt">André Aguiar</author>
  <maintainer email="andre.s.aguiar@inesctec.pt">André Aguiar</maintainer>

  <license>TODO</license>  

  <url type="website">https://gitlab.inesctec.pt/agrob/agrobvslam</url>
  <url type="bugtracker">https://gitlab.inesctec.pt/agrob/agrobvslam/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

</package>
