<?xml version="1.0"?>
<package format="2">
  <name>mapper</name>
  <version>0.0.0</version>
  <description>The mapper package</description>

  <maintainer email="andre.s.aguiar@inesctec.pt">André Aguiar</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>libqt5-dev</build_depend>
  <build_depend>edgetpu_cpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>libqt5-dev</exec_depend>
  <exec_depend>edgetpu_cpp</exec_depend>

</package>
